# py-logrunner

./: README.md  makefile  pyproject.toml
src/logrunner/: __init__.py  logrunner.py
tests/: test_logrunner.py
